Fix name of caption field.

--- a/photos/photos.html
+++ b/photos/photos.html
@@ -12,7 +12,7 @@
             </label>
             <label>
                 Caption
-                <input id="caption" name="url" />
+                <input id="caption" name="caption" />
             </label>
             <button>Add photo</button>
         </form>
